<resources>
    <string name="app_name">Hello</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_user_ragister_here">New User/<font color="#000000">Register Here  </font> </string>
    <string name="already_user_login_here">Already User/<font color="#000000">Login Here</font></string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="hello_wrold">Hello Wrold</string>
    <string name="type_message_here">type message here</string>
</resources>